# cpp-call-rust

./: .gitignore  LICENSE  README.md
cpp/: main.cpp  meson.build
rust/: Cargo.toml
rust/src/: lib.h  lib.rs
